src/test/ui/consts/const-eval/union-ice.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/union-ice.rs:14:33
   |
LL | const FIELD3: Field3 = unsafe { UNION.field3 };
   |                                 ^^^^^^^^^^^^ type validation failed: encountered uninitialized bytes, but expected initialized bytes

error[E0080]: evaluation of constant value failed
  --> $DIR/union-ice.rs:18:17
   |
LL |     b: unsafe { UNION.field3 },
   |                 ^^^^^^^^^^^^ type validation failed: encountered uninitialized bytes, but expected initialized bytes

error[E0080]: evaluation of constant value failed
  --> $DIR/union-ice.rs:29:18
   |
LL |         unsafe { UNION.field3 },
   |                  ^^^^^^^^^^^^ type validation failed: encountered uninitialized bytes, but expected initialized bytes

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0080`.
